<resources>
    <string name="app_name">CondorLabsSkills</string>
    <string name="theSportsDbApi">4012960</string>
    <string name="teams">TEAMS</string>
    <string name="stadium">Stadium</string>
    <string name="name">Name</string>
    <string name="team_badge">Team Badge</string>
    <string name="todo">TODO</string>
    <string name="foundation">Foundation</string>
    <string name="description">Description</string>
    <string name="web">Web</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
</resources>
