<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:mlns="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/clDetail">

        <ImageView
                android:id="@+id/ivBadge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/todo"/>

        <ImageView
                android:id="@+id/ivJersey"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="128dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/todo"
                android:layout_marginStart="16dp"/>

        <TextView
                android:id="@+id/tvTeamName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/ivBadge"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/ivBadge"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:id="@+id/tvFundation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/foundation"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTeamName"
                android:layout_marginStart="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tvTeamName"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/tvWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/ivJersey"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/ivJersey"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:id="@+id/tvFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvWebsite"
                android:layout_marginStart="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tvWebsite"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/tvTwitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvFacebook"
                android:layout_marginStart="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tvFacebook"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/tvInstagram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instagram"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTwitter"
                android:layout_marginStart="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tvTwitter"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/tvYoutube"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/youtube"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvInstagram"
                android:layout_marginStart="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tvInstagram"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/ivJersey"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="@+id/ivJersey"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>