<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp" >

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/clTeams"
            android:paddingBottom="10dp" >


        <ImageView
                android:id="@+id/ivTeam"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/todo"/>

        <TextView
                android:id="@+id/tvTeamName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/ivTeam"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@+id/ivTeam"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:id="@+id/tvNameStadium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stadium"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTeamName"
                android:layout_marginStart="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tvTeamName"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>